name:                h99p
version:             0.1.0
homepage:            https://github.com/cgimenes/H-99
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PartOne
                     , PartTwo
                     , PartFour
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite h99p-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MainTests.hs
  build-depends:       base
                     , h99p
                     , tasty
                     , tasty-hunit
  other-modules:       PartOneTestSuite
                     , PartTwoTestSuite
                     , PartFourTestSuite
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/cgimenes/H-99
